--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ".": {
       "types": "./index.d.ts",
       "import": "./dist/index.mjs",
+      "default": "./dist/index.js",
       "require": "./dist/index.js"
     },
     "./package.json": "./package.json"
