--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     ".": {
       "types": "./index.d.ts",
       "import": "./dist/index.mjs",
-      "default": "./dist/index.js",
-      "require": "./dist/index.js"
+      "require": "./dist/index.js",
+      "default": "./dist/index.js"
     },
     "./package.json": "./package.json"
   },
